--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -3,8 +3,8 @@
 
   <%= render "form", recipe: @recipe %>
 
-  <div class="mt-6 text-center space-x-4">
-    <%= link_to "Show this recipe", @recipe, class: "inline-block bg-blue-500 text-white text-sm px-4 py-2 rounded hover:bg-blue-600" %>
-    <%= link_to "Back to recipes", recipes_path, class: "inline-block bg-gray-500 text-white text-sm px-4 py-2 rounded hover:bg-gray-600" %>
+  <div class="mt-2">
+    <%= link_to "Show this recipe", @recipe, class: "bg-blue-500 text-white text-sm px-4 py-2 rounded hover:bg-blue-600" %>
+    <%= link_to "Back to recipes", recipes_path, class: "bg-gray-500 text-white text-sm px-4 py-2 rounded hover:bg-gray-600" %>
   </div>
 </div>
