--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,17 +10,17 @@
   </div>
 
   <% if @recipes.any? %>
-    <div id="recipes" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div id="recipes" class="flex flex-wrap gap-8 justify-center">
       <% @recipes.each do |recipe| %>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 w-full md:w-1/2 lg:w-1/4">
           <img src="<%= recipe.image %>" alt="<%= recipe.title %>" class="w-full h-48 object-cover">
           <div class="p-4">
             <h2 class="text-lg font-semibold text-gray-800 truncate">
               <%= recipe.title %>
             </h2>
-            <div class="mt-4 text-right">
-              <p>Ingredients : <%= recipe.ingredients.length %></p>
-              <%= link_to "Show this recipe", recipe, class: "inline-block bg-blue-500 text-white text-sm px-4 py-2 rounded hover:bg-blue-600" %>
+            <div class="text-right">
+              <p class="mb-4">Ingredients: <%= recipe.ingredients.length %></p>
+              <%= link_to "Show this recipe", recipe, class: "bg-blue-500 text-white text-sm px-4 py-2 rounded hover:bg-blue-600" %>
             </div>
           </div>
         </div>
