--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="max-w-6xl mx-auto p-6">
+<div class="mx-auto p-6">
   <% if notice %>
     <div class="mb-4 p-4 bg-green-100 border border-green-400 text-green-700 rounded">
       <%= notice %>
@@ -10,7 +10,7 @@
   </div>
 
   <% if @recipes.any? %>
-    <div id="recipes" class="flex flex-wrap gap-8 justify-center">
+    <div id="recipes" class="flex flex-wrap gap-10 justify-center">
       <% @recipes.each do |recipe| %>
         <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 w-full md:w-1/2 lg:w-1/4">
           <img src="<%= recipe.image %>" alt="<%= recipe.title %>" class="w-full h-48 object-cover">
